# tilekoumanto

./: .gitignore  .gitmodules  Makefile  README.md  requirements.txt
archive/: runbook.md
archive/docs_old/: mvp_firmware_design.md
backend/: compose.yml
backend/caddy/: Dockerfile
backend/caddy/etc/: Caddyfile
backend/django/: .dockerignore  Dockerfile  requirements.txt
backend/django/config/: settings.py  urls.py
backend/django/devices/: admin.py  contracts.py  models.py  tests.py  urls.py  views.py
backend/django/devices/contracts/: api.py  mqtt.py
backend/django/devices/management/commands/: load_device_manifest.py  mqtt_catcher.py
backend/django/devices/migrations/: 0001_initial.py  0002_devicemessageraw.py  0003_alter_devicemessageraw_options_device_device_name_and_more.py  0004_rename_device_name_device_name.py  0005_remove_devicemessageraw_device_timestamp_and_more.py  0006_rename_name_device_display_name_and_more.py  __init__.py
backend/django/devices/templates/devices/: device_list.html
backend/mosquitto/config/: mosquitto.conf
device/: CMakeLists.txt  Makefile  send_telemetry.py  simulator.py
device/cmake/: gcc-arm-none-eabi.cmake  report_memory.py
device/core/: CMakeLists.txt
device/core/config/: FreeRTOSConfig.h  FreeRTOSConfig_core.h
device/core/include/: tk_core.h  tk_internal.h  tk_platform.h  tk_status.h  tk_telemetry.h  tk_types.h
device/core/src/: tk_core.c  tk_status_task.c  tk_telemetry.c  tk_telemetry.c.old  tk_telemetry_task.c
device/core/tests/: test_logic.c
device/include/: FreeRTOSConfig.h  tk_hal.h
device/src/: tk_core.c
device/targets/python-sim/: .env.example  CMakeLists.txt  CMakePresets.json  requirements.txt
device/targets/python-sim/app/: main.py  publisher.py  simulator.py
device/targets/python-sim/config/: FreeRTOSConfig.h
device/targets/python-sim/ffi/: core.py
device/targets/python-sim/platform/: tk_freertos_hooks.c
device/targets/python-sim/tests/: test_publisher.py
device/targets/simulator/src/: sim_hooks.c
device/targets/stm32/: CMakeLists.txt  CMakePresets.json  toolchain-arm-none-eabi.cmake
device/targets/stm32/Core/Src/: main.c
device/targets/stm32/app/: main.c
device/targets/stm32/cmake/: arm-none-eabi.cmake
device/targets/stm32/config/: FreeRTOSConfig.h
device/targets/stm32/linker/: STM32F446XX_FLASH.ld
device/targets/stm32/platform/: startup_stm32f446xx.s  system_stm32f4xx.c
docs/: 01-project-map.md  02-product-definition.md  03-current-state.md  04-decisions.md  05-architecture.md  06-implementation-log.md  07-next-actions.md  08-open-questions.md  09-device-subsystem.md  09-scratchbook.md  10-scratchbook.md  foundation.md  working_notes.md
docs/contracts/: mqtt.json  mqtt.yaml  openapi.yaml
operator/: make-restart-prompt.py  project.py  prompt.md
operator/lib/: certs.py
